# gitbox

./: .dockerignore  Cargo.toml  LICENSE  README.md  update_version.sh
docs/: architecture.md
src/: main.rs
src/lib/: application.rs  common.rs  domain.rs  infrastructure.rs  lib.rs  subcommands.rs  usecase.rs  usecases.rs
src/lib/application/: commit_metadata_repository_impl.rs  commit_repository_impl.rs  commit_summary_repository_impl.rs  controller.rs  error.rs  gitextra_write_repository_impl.rs  gitinfo_repository_impl.rs  manager.rs  options.rs  presenter.rs  repository_impl.rs  retriever.rs  semantic_version_presenter.rs  tag_write_repository_impl.rs  type_alias.rs  version_repository_impl.rs
src/lib/common/: cached_values.rs  command_issuer.rs  commons.rs  git.rs  semantic_version.rs  trigger.rs
src/lib/domain/: commit.rs  commit_summary.rs  configuration.rs  constant.rs  conventional_commit.rs  conventional_commit_summary.rs  error.rs  semantic_version.rs  tree_graph_line.rs  trigger.rs  type_aliases.rs
src/lib/infrastructure/: error.rs  git_cli.rs  gitextra_append_manager.rs  gitextra_ingress_helper.rs  gitextra_manager_impl.rs  gitextra_read_manager.rs  helper.rs  interface.rs  output_manager_impl.rs  prompt_manager.rs  subcommand.rs  subcommands.rs
src/lib/subcommands/: changelog.rs  commit.rs  complete.rs  describe.rs  grammar.rs  init.rs  license.rs  tree.rs
src/lib/usecase/: configuration.rs  error.rs  license_metadata.rs  metadata_spec.rs  repository.rs  usecases.rs
src/lib/usecases/: configuration.rs  error.rs  license_metadata.rs  metadata_spec.rs  repository.rs  tree_graph_line.rs  usecases.rs
tests/: main_test.rs
tests/common/: base_image.rs  container_manager.rs  integration_test.rs  mod.rs
utils/: update_version.sh
(+170 files in other folders)
