[package]
name = "gitbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
pest = "2.7.5"
pest_derive = "2.7.5"
regex = "1.10.2"
requestty = "0.5.0"
ureq = "2.8.0"


[lib]
name = "gitbox_lib"
path = "src/lib/lib.rs"

