[package]
name = "gitbox"
version = "2.0.0"
edition = "2021"
description = "Git toolbox to simplify adoption of conventional commits and semantic version, among other things."
license = "MIT"
repository = "https://github.com/asperan/gitbox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
strip = "symbols"
panic = "abort"

[dependencies]
ahash = "0.8.6"
chrono = "0.4.31"
clap = { version = "4.4.5", features = ["derive"] }
clap_complete = "4.4.4"
colored = "2.1.0"
pest = "2.7.5"
pest_derive = "2.7.5"
regex = "1.10.2"
requestty = "0.5.0"
ureq = "2.8.0"


[lib]
name = "gitbox_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "gb"
path = "src/main.rs"


